# TVAiPlatformFG

./: .gitignore  README.md  SHARED_CONTRACT.md  supervisord.conf
api/: __init__.py  config.py  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/dify_apps/: dialogue_generator.yaml  script_writer.yaml  storyboard_splitter.yaml
api/json_templates/: character_profile.json  dialogue.json  emotion_tag.json  scene_description.json  script_outline.json  storyboard.json
api/models/: __init__.py  base.py  character.py  production.py  project.py  script.py  summary.py  template.py
api/routers/: __init__.py  characters.py  editor.py  episodes.py  export.py  health.py  media.py  production.py  projects.py  scripts.py  settings.py  templates.py
api/services/: __init__.py  audio_editor.py  character_consistency.py  chattts_client.py  comfyui_runner.py  context_compressor.py  dify_client.py  editor.py  ffmpeg_service.py  global_settings.py  image_editor.py  production_pipeline.py  script_service.py  storage_optimizer.py  subtitle_service.py  summary_service.py  sync_engine.py  template_service.py  tts_service.py  video_editor.py  video_export.py
api/tests/: __init__.py  test_editor.py  test_export.py  test_production.py
api/workflows/: character_reference_sheet.json  image_to_video_wan.json  inpaint.json  keyframe_generation.json  multi_character_compose.json
docs/: DEVELOPMENT_SPECIFICATION.md  开发文档.txt
scripts/: batch_export.py  check_versions.py  cleanup_temp.sh  init_db.py  init_templates.py  start_all.sh  stop_all.sh
(+67 files in other folders)
